<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Game name textview !-->

    <!--Team1 textview !-->

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="cursive"
        android:lineSpacingExtra="34sp"
        android:text="@string/gameName"
        android:textAlignment="textStart"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/team_1"

        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gameName"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <!--Team2 textview !-->
    <TextView
        android:id="@+id/team2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/team_2"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/gameName"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <!--Team1 points textview !-->
    <TextView
        android:id="@+id/team1points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/team1Points"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/team1TextView"
        app:layout_constraintTop_toBottomOf="@+id/team1TextView" />

    <!--Team2 points textview !-->
    <TextView
        android:id="@+id/team2points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/team2Points"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/team2TextView"
        app:layout_constraintTop_toBottomOf="@+id/team2TextView" />

    <!--Team1 increase points button !-->

    <!--Team1 decrease points button !-->

    <!--Team2 increase points button !-->

    <!--Team2 decrease points button !-->

    <!--Points textview !-->

    <Button
        android:id="@+id/team2AttackButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="35dp"
        android:onClick="teamTwoAttack"
        android:text="ATTACK +"
        app:layout_constraintBottom_toTopOf="@+id/team2DefenseButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/team2DefenseButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="100dp"
        android:onClick="teamTwoDefense"
        android:text="DEFENSE -"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/team1AttackButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="35dp"
        android:onClick="teamOneAttack"
        android:text="ATTACK +"
        app:layout_constraintBottom_toTopOf="@+id/team1DefenseButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/team1DefenseButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="100dp"
        android:onClick="teamOneDefense"
        android:text="DEFENSE -"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1TextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <!--Spinner !-->
    <Spinner
        android:id="@+id/spinnerPoints"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>